Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-21335

QML Outline: Fast typing or C'n'P can confuse outline

    XMLWordPrintable

Details

    • Linux/X11
    • 7c92db106d5b7ea1696fe4df54033f4979d077e5 (qt-creator/qt-creator/master)

    Description

      Steps to reproduce:

      • create a Qt Quick Application (Empty) from template
      • remove the QtQuick.Window import
      • mark the code from
        Window { 

        until (excluding) the closing curly brace of the Window item

      • paste the following
        Rectangle {
            id: window
            
            property string txtCnt: "Property"
            signal clicked
            
            function clicked() {
                console.log("click")
                
            }    width: 800; height: 640
            color: "white"
            
            Text {
                id: addedText
                text: "Squish QML outline test"
                color: "darkcyan"
                font.bold: true
                anchors.centerIn: parent
                
            } 
      • check the function clicked() inside the outline - there's a value assigned (for me it's a 'qsTr("Hello World")' - but I have seen others as well (depending on whether you replace or substitute code)

       Found by Squish test tst_qml_outline.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mabenell Marco Benelli
            cstenger Christian Stenger
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes