QmlJSEditor: Clear old values when updating outline

Fixes: QTCREATORBUG-21335
Change-Id: I46b1ad52f62edf7865a44ade298ff2233ca4554a
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>